# startship

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  docker-nginx.conf  findings.md  integration_test_plan.md  package-lock.json  product_plan.md  progress.md  pyproject.toml  requirements.docker.txt  requirements.txt  task_plan.md  unit_test_plan.md
.worktrees/stage2-intent-semantic/src/: __init__.py  config.py
.worktrees/stage2-intent-semantic/src/api/: app.py
.worktrees/stage2-intent-semantic/src/db/: __init__.py  base.py  sqlite.py
.worktrees/stage2-intent-semantic/src/services/: recommendation.py  trend_analysis.py
.worktrees/stage2-intent-semantic/tests/unit/: test_migrations.py  (+1 more)
config/: agents.yaml  app.yaml  database.yaml
docs/: business-logic.md  fts5-guide.md  graph-knowledge-logic.md
docs/plans/: 2024-12-30-product-roadmap-design.md  2024-12-30-stage2-intent-semantic-design.md  2024-12-30-stage2-intent-semantic-impl.md  2024-12-31-stage3-advanced-features-design.md  2024-12-31-stage3-advanced-impl.md  2025-01-16-graph-knowledge.md  2025-01-20-hybrid-recommendation-system.md  2025-12-28-phase1-foundation.md  2025-12-28-phase2-services.md  2025-12-28-phase2-summary.md  2026-01-19-semantic-search-design.md  2026-01-19-semantic-search.md  README.phase1.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: graph.ts  sync.ts  user.ts
frontend/src/components/: BaseModal.vue  CollectionCardSkeleton.vue  CollectionManager.vue  ConfirmDialog.vue  DarkModeToggle.vue  EmptyState.vue  LanguageBarChart.vue  NoteEditor.vue  PieChart.vue  RatingStars.vue  RepoCard.vue  RepoCardSkeleton.vue  SkeletonLoader.vue  Sparkline.vue  SyncStatus.vue  TagManager.vue  TrendIndicator.vue
frontend/src/composables/: useAsyncOperation.ts  useCollections.ts  useConfirm.ts  useDark.ts  useExport.ts  useKeyboard.ts  useNotes.ts  useProfile.ts  useRecommendations.ts  useTags.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: api.ts  chat.ts  repos.ts  user.ts
frontend/src/types/: collections.ts  index.ts  network.ts  recommendation.ts
frontend/src/utils/: download.ts  format.ts  storage.ts
frontend/src/views/: ChatView.vue  CollectionsView.vue  DeletedReposView.vue  HomeView.vue  InitView.vue  NetworkView.vue  RepoDetailView.vue  SearchView.vue  SyncHistoryView.vue  TechProfileView.vue  TrendView.vue
scripts/: dev.py
src/: __init__.py  agent.py  config.py  context.py  enhanced_workbench.py  github_memory.py  main.py  model.py  server.py
src/api/: app.py
src/api/routes/: chat.py  graph.py  init.py  network.py  recommendation.py  search.py  sync.py  trends.py  user_data.py  utils.py  vector.py
src/data/: synonyms.json
src/db/: __init__.py  base.py  sqlite.py  sqlite_schema.sql
src/db/migrations/: 001_add_starred_at.sql  002_add_network_cache.sql  003_add_user_data_tables.sql  004_add_github_metadata_fields.sql  005_add_sync_fields.sql  006_add_graph_edges_table.sql  007_remove_tech_stack_table.sql  008_rebuild_fts5_with_unicode61.sql  009_add_semantic_edge_type.sql
src/github/: __init__.py  base.py  client.py  graphql.py  models.py
src/llm/: __init__.py  base.py  openai.py
src/services/: __init__.py  chat.py  context.py  hybrid_recommendation.py  hybrid_search.py  init.py  intent.py  network.py  query_expander.py  recommendation.py  scheduler.py  search.py  stats.py  sync.py  trend_analysis.py  vectorization.py
src/services/graph/: __init__.py  edges.py  semantic_edges.py
src/starship/: __init__.py
src/utils/: __init__.py  logging.py
src/vector/: __init__.py  chroma_store.py  embeddings.py  readme_filter.py  semantic.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_database_lifecycle.py  test_fts5_vs_semantic_search.py  test_full_stack.py  test_graph_workflow.py  test_hybrid_recommendation_e2e.py  test_hybrid_search_weighted_fusion.py  test_scheduler_integration.py  test_semantic_search_real_world.py  test_semantic_search_value.py  test_sync_api_integration.py  test_sync_service_integration.py
tests/unit/: __init__.py  test_app.py  test_chat_service.py  test_chat_with_context.py  test_chroma_store.py  test_config.py  test_context.py  test_db_base.py  test_db_factory.py  test_embeddings.py  test_embeddings_ollama.py  test_fts.py  test_github_client.py  test_github_models.py  test_graph_edges.py  test_hybrid_recommendation.py  test_hybrid_search.py  test_hybrid_search_with_expansion.py  test_init_service.py  test_init_with_starred_at.py  test_intent.py  test_llm.py  test_network_migration.py  test_network_routes.py  test_network_service.py  test_query_expander.py  test_readme_filter.py  test_recommendation.py  test_recommendation_routes.py  test_search_routes.py  test_search_service.py  test_semantic.py  test_semantic_edges.py  test_sqlite.py  test_stats.py  test_sync_routes.py  test_sync_scheduler.py  test_sync_service.py  test_trend_analysis.py  test_trends_routes.py  (+1 more)
(+5 files in other folders)
