[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starship"
version = "1.0.0"
description = "AI Stars GitHub Knowledge Engine - Transform your GitHub stars into an intelligent knowledge base"
authors = [
    {name = "Starship Team", email = "zmzposa@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "github", "knowledge-base", "rag", "vector-search", "autogen"]
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext[ollama,openai,chromadb]>=0.4.6",
    "mcp[cli]>=1.0.0",
    "fastapi>=0.116.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pyyaml>=6.0.2",  # Only used in tests
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/dustyposa/starship"
Documentation = "https://starship-ai.github.io/starship"
Repository = "https://github.com/dustyposa/starship"
"Bug Tracker" = "https://github.com/dustyposa/starship/issues"

[project.scripts]
starship = "starship.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
